--- a/articles/container-service/dcos-swarm/TOC.yml
+++ b/articles/container-service/dcos-swarm/TOC.yml
@@ -1,98 +1,91 @@
-items:
 - name: ACS med DC/OS och Swarm
   href: ./index.yml
 - name: Översikt
   items:
-  - name: Om Container Service
-    href: container-service-intro.md
+    - name: Om Container Service
+      href: container-service-intro.md
 - name: Snabbstarter
-  items:
-  - name: Docker Swarm
-    href: container-service-swarm-mode-walkthrough.md
-  - name: DC/OS
-    href: container-service-dcos-quickstart.md
   expanded: true
+  items:
+    - name: Docker Swarm
+      href: container-service-swarm-mode-walkthrough.md
+    - name: DC/OS
+      href: container-service-dcos-quickstart.md
 - name: Självstudier
   items:
-  - name: 1 – Skapa/hantera kluster
-    href: container-service-dcos-manage-tutorial.md
-  - name: 2 – Belastningsutjämna program
-    href: container-service-load-balancing.md
-  - name: 3 – Hantera datavolymer
-    href: container-service-dcos-fileshare.md
-  - name: 4 – Integrera med ACR
-    href: container-service-dcos-acr.md
+    - name: 1 – Skapa/hantera kluster
+      href: container-service-dcos-manage-tutorial.md
+    - name: 2 – Belastningsutjämna program
+      href: container-service-load-balancing.md
+    - name: 3 – Hantera datavolymer
+      href: container-service-dcos-fileshare.md
+    - name: 4 – Integrera med ACR
+      href: container-service-dcos-acr.md
 - name: Begrepp
   items:
-  - name: Säkra container
-    href: container-service-security.md
+    - name: Säkra container
+      href: container-service-security.md
 - name: Instruktionsguider
   items:
-  - name: Skala ett ACS-kluster
-    href: container-service-scale.md
-  - name: DC/OS
-    items:
-    - name: Hantering av containrar – UI för DC/OS
-      href: container-service-mesos-marathon-ui.md
-    - name: Hantering av container – REST API för DC/OS
-      href: container-service-mesos-marathon-rest.md
-    - name: DC/OS-agentpooler
-      href: container-service-dcos-agents.md
-    - name: Aktivera offentlig åtkomst till DC/OS
-      href: container-service-enable-public-access.md
-    - name: App-/användarspecifik initierare i DC/OS
-      href: container-service-application-specific-marathon.md
-    - name: Canary Release med Vamp
-      href: container-service-dcos-vamp-canary-release.md
-    - name: Övervaka DC/OS
+    - name: Skala ett ACS-kluster
+      href: container-service-scale.md
+    - name: DC/OS
       items:
-      - name: Övervaka med ELK
-        href: container-service-monitoring-elk.md
-      - name: Övervaka med OMS
-        href: container-service-monitoring-oms.md
-      - name: Övervaka med Datadog
-        href: container-service-monitoring.md
-      - name: Övervaka med Sysdig
-        href: container-service-monitoring-sysdig.md
-      - name: Övervaka med Dynatrace
-        href: container-service-monitoring-dynatrace.md
-  - name: Docker Swarm
-    items:
-    - name: Snabbstart för Docker CE
-      href: container-service-swarm-mode-walkthrough.md
-    - name: Docker och Docker Compose
-      href: container-service-docker-swarm.md
-    - name: CI/CD med Docker Swarm och Azure DevOps
-      href: container-service-docker-swarm-setup-ci-cd.md
-    - name: CI/CD med Docker Swarm (ACS-motor) och Azure DevOps
-      href: container-service-docker-swarm-mode-setup-ci-cd-acs-engine.md
+        - name: Hantering av containrar – UI för DC/OS
+          href: container-service-mesos-marathon-ui.md
+        - name: Hantering av container – REST API för DC/OS
+          href: container-service-mesos-marathon-rest.md
+        - name: DC/OS-agentpooler
+          href: container-service-dcos-agents.md
+        - name: Aktivera offentlig åtkomst till DC/OS
+          href: container-service-enable-public-access.md
+        - name: App-/användarspecifik initierare i DC/OS
+          href: container-service-application-specific-marathon.md
+        - name: Canary Release med Vamp
+          href: container-service-dcos-vamp-canary-release.md
+        - name: Övervaka DC/OS
+          items:
+            - name: Övervaka med ELK
+              href: container-service-monitoring-elk.md
+            - name: Övervaka med OMS
+              href: container-service-monitoring-oms.md
+            - name: Övervaka med Datadog
+              href: container-service-monitoring.md
+            - name: Övervaka med Sysdig
+              href: container-service-monitoring-sysdig.md
+            - name: Övervaka med Dynatrace
+              href: container-service-monitoring-dynatrace.md
+    - name: Docker Swarm
+      items:
+        - name: Snabbstart för Docker CE
+          href: container-service-swarm-mode-walkthrough.md
+        - name: Docker och Docker Compose
+          href: container-service-docker-swarm.md
+        - name: CI/CD med Docker Swarm och Azure DevOps
+          href: container-service-docker-swarm-setup-ci-cd.md
+        - name: CI/CD med Docker Swarm (ACS-motor) och Azure DevOps
+          href: container-service-docker-swarm-mode-setup-ci-cd-acs-engine.md
 - name: Referens
   items:
-  - name: Azure CLI
-    href: /cli/azure/acs
-  - name: PowerShell
-    href: /powershell/module/az.compute
-  - name: REST
-    href: /rest/api/container-service
+    - name: Azure CLI
+      href: /cli/azure/acs
+    - name: PowerShell
+      href: /powershell/module/az.compute
+    - name: REST
+      href: /rest/api/container-service
 - name: Resurser
   items:
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/
-  - name: VANLIGA FRÅGOR OCH SVAR
-    href: container-service-faq.md
-  - name: Mallar – ACS-motor
-    href: https://github.com/Azure/acs-engine
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/container-service/
-  - name: Regional tillgänglighet
-    href: https://azure.microsoft.com/regions/services/
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-container-service
-  - name: Videoklipp
-    href: https://azure.microsoft.com/resources/videos/index/?services=container-service&sort=newest
-ms.openlocfilehash: 52376d4cfff4fe96f07b38a2b9eb09e896769617
-ms.sourcegitcommit: 04716e13cc2ab69da57d61819da6cd5508f8c422
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 04/02/2019
-ms.locfileid: "58848115"
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: VANLIGA FRÅGOR OCH SVAR
+      href: container-service-faq.md
+    - name: Mallar – ACS-motor
+      href: 'https://github.com/Azure/acs-engine'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/container-service/'
+    - name: Regional tillgänglighet
+      href: 'https://azure.microsoft.com/regions/services/'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-container-service'
+    - name: Videoklipp
+      href: 'https://azure.microsoft.com/resources/videos/index/?services=container-service&sort=newest'
