--- a/articles/healthcare-apis/TOC.yml
+++ b/articles/healthcare-apis/TOC.yml
@@ -1,60 +1,53 @@
-items:
 - name: Azure API för FHIR
   href: index.yml
 - name: Översikt
   items:
-  - name: Om Azure API för FHIR
-    href: overview.md
-  - name: Om FHIR Server för Azure
-    href: overview-open-source-server.md
+    - name: Om Azure API för FHIR
+      href: overview.md
+    - name: Om FHIR Server för Azure
+      href: overview-open-source-server.md
 - name: Snabbstarter
-  items:
-  - name: Distribuera Azure API för FHIR – portalen
-    href: fhir-paas-portal-quickstart.md
-  - name: Distribuera Azure API för FHIR – PowerShell
-    href: fhir-paas-powershell-quickstart.md
-  - name: Distribuera Azure API för FHIR – CLI
-    href: fhir-paas-cli-quickstart.md
-  - name: Distribuera FHIR Server för Azure – portalen
-    href: fhir-oss-portal-quickstart.md
-  - name: Distribuera FHIR Server för Azure – PowerShell
-    href: fhir-oss-powershell-quickstart.md
-  - name: Distribuera FHIR Server för Azure – CLI
-    href: fhir-oss-cli-quickstart.md
-  - name: Konfigurera CORS
-    href: configure-cross-origin-resource-sharing.md
   expanded: true
+  items:
+    - name: Distribuera Azure API för FHIR – portalen
+      href: fhir-paas-portal-quickstart.md
+    - name: Distribuera Azure API för FHIR – PowerShell
+      href: fhir-paas-powershell-quickstart.md
+    - name: Distribuera Azure API för FHIR – CLI
+      href: fhir-paas-cli-quickstart.md
+    - name: Distribuera FHIR Server för Azure – portalen
+      href: fhir-oss-portal-quickstart.md
+    - name: Distribuera FHIR Server för Azure – PowerShell
+      href: fhir-oss-powershell-quickstart.md
+    - name: Distribuera FHIR Server för Azure – CLI
+      href: fhir-oss-cli-quickstart.md
+    - name: Konfigurera CORS
+      href: configure-cross-origin-resource-sharing.md
 - name: Självstudier
-  items:
-  - name: Få åtkomst till FHIR-API med Postman
-    href: access-fhir-postman-tutorial.md
-  - name: Använda SMART på FHIR-proxy
-    href: use-smart-on-fhir-proxy.md
   expanded: false
+  items:
+    - name: Få åtkomst till FHIR-API med Postman
+      href: access-fhir-postman-tutorial.md
+    - name: Använda SMART på FHIR-proxy
+      href: use-smart-on-fhir-proxy.md
 - name: Instruktionsguider
-  items:
-  - name: Registrera ett resursprogram
-    href: register-resource-azure-ad-client-app.md
-  - name: Registrera ett konfidentiellt klientprogram
-    href: register-confidential-azure-ad-client-app.md
-  - name: Registrera ett offentligt klientprogram
-    href: register-public-azure-ad-client-app.md
-  - name: Registrera ett tjänstklientprogram
-    href: register-service-azure-ad-client-app.md
-  - name: Hämta en token för Azure API för FHIR – CLI
-    href: get-healthcare-apis-access-token-cli.md
-  - name: Hitta ID:n för identitetsobjekt
-    href: find-identity-object-ids.md
   expanded: false
+  items:
+    - name: Registrera ett resursprogram
+      href: register-resource-azure-ad-client-app.md
+    - name: Registrera ett konfidentiellt klientprogram
+      href: register-confidential-azure-ad-client-app.md
+    - name: Registrera ett offentligt klientprogram
+      href: register-public-azure-ad-client-app.md
+    - name: Registrera ett tjänstklientprogram
+      href: register-service-azure-ad-client-app.md
+    - name: Hämta en token för Azure API för FHIR – CLI
+      href: get-healthcare-apis-access-token-cli.md
+    - name: 'Hitta ID:n för identitetsobjekt'
+      href: find-identity-object-ids.md
 - name: Resurser
   items:
-  - name: VANLIGA FRÅGOR OCH SVAR
-    href: fhir-faq.md
-  - name: Funktioner som stöds
-    href: fhir-features-supported.md
-ms.openlocfilehash: e120b0775e9f0920a1deab4bd1e126f4ad06e132
-ms.sourcegitcommit: d83fa82d6fec451c0cb957a76cfba8d072b72f4f
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 04/02/2019
-ms.locfileid: "58862836"
+    - name: VANLIGA FRÅGOR OCH SVAR
+      href: fhir-faq.md
+    - name: Funktioner som stöds
+      href: fhir-features-supported.md
